# personio_api

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/PersonioClient/: __init__.py  _oauth_authenticator.py  _personio_client.py  factory.py  i_personio_client.py  requirements.txt
src/PersonioClient/Data/: CostCenter.py  Department.py  Employment.py  Job.py  LegalEntity.py  ListResponse.py  Meta.py  OrgUnit.py  Person.py  ReferenceObject.py  Team.py  Workplace.py  __init__.py
src/PersonioSyncService/: __init__.py  cost_center_mapper.py  custom_serializer.py  employment_mapper.py  factory.py  i_personio_sync_service.py  legal_entity_mapper.py  org_units_mapper.py  person_mapper.py  personio_sync_service.py  requirements.txt
src/PersonioSyncService/Data/: SyncEmployment.py  SyncPerson.py  __init__.py  syncCostCenter.py
