[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personio-api"
version = "0.1.0"
description = "Personio Sync API – Microservice to fetch and sync Personio persons."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "marshmallow==4.1.2",
    "marshmallow_dataclass==8.7.1",
    "httpx==0.28.1",
    "httpx-retries==0.4.6",
    "python-dotenv==1.2.1",
    "anyio==4.12.0",
    "certifi>=2025.11.12",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "idna>=3.11",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
